--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body{
+    margin: 0%;
     font-family: 'Poppins', sans-serif;
 }
 h1{
     font-size: 50px;
+}
+h2{
+    font-size: 40px;
 }
 .muntasir{
     color: tomato;
@@ -16,4 +20,24 @@ h1{
 }
 .half_width img{
     width: 100%;
+}
+.top_banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 200px;
+}
+
+.button{
+    text-decoration:  none;
+    background-image: linear-gradient( 90deg, lightsalmon, orange);
+    padding: 10px 20px;
+    border-radius: 5px;
+    font: bold;
+    color: white;
+}
+.dream_text{
+    color: tomato;
 }
