--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h2{
     font-size: 40px;
 }
 .muntasir{
-    color: tomato;
+    color: #ff6347;
     
 }
 .half_width{
@@ -27,12 +27,12 @@ h2{
 }
 section{
     height: 500px;
-    padding-bottom: 200px;
+    padding-bottom: 300px;
 }
 
 .button{
     text-decoration:  none;
-    background-image: linear-gradient( 90deg, lightsalmon, orange);
+    background-image: linear-gradient( 90deg, #ffa07a, orange);
     padding: 10px 20px;
     border-radius: 5px;
     font: bold;
@@ -40,4 +40,35 @@ section{
 }
 .dream_text{
     color: tomato;
+}
+.dream_big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
+}
+
+.single_experience{
+    box-shadow: 10px 10px 40px rgb(61, 61, 61);
+    border-radius: 5px;
+    height: 80%;
+}
+.experience_area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    
+    
+}
+#fancy_orange{
+    border-left: 7px solid;
+    border-image: linear-gradient( lightsalmon, tomato);
+    border-image-slice: 1;
+    
+}
+#fancy_blue{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+    
 }
