--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body{
         left: 0px;
         top: 5px;
 }
-.MALAYSIA img{
+.textlogo img{
     position: absolute;
     width: 209px;
     height: 66px;
